# VideoPrivacy

./: .gitattributes  .gitignore  README.md
cpp/: BUILDING.md  CMakeLists.txt
cpp/include/video_privacy/: config.hpp  face_detector.hpp  gpu_runtime_installer.hpp  image_preprocessor.hpp  media_processor.hpp  mosaic.hpp  video_processor.hpp
cpp/src/: face_detector.cpp  gpu_runtime_installer.cpp  gui_main.cpp  image_preprocessor.cpp  installer_main.cpp  main.cpp  media_processor.cpp  mosaic.cpp  video_processor.cpp
installer/: VideoPrivacy.iss
